# rootbeer

./: .gitignore  AGENTS.md  CMakeLists.txt  Cargo.toml  Dockerfile  README.md  build.zig  build.zig.zon  flake.nix  guix.scm  lefthook.yml  meson.build  mise.toml  package.json  pnpm-lock.yaml  rootbeer.yml  rust-analyzer.toml  selene.toml  wrangler.toml
.github/workflows/: build.yml  clang-format-check.yml  deploy.yml  docs.yml  update-flake-lock.yml
.vitepress/: config.ts  nav.ts  sections.ts
.vitepress/theme/: custom.css
.zed/: settings.json
cmake/: BuildLuaJIT.cmake  FindLuaJIT.cmake  LuaJIT.cmake  TapeCLI.cmake  luajit.cmake
crates/rootbeer-cli/: Cargo.toml  build.rs
crates/rootbeer-cli/src/: apply.rs  cd.rs  edit.rs  init.rs  lsp.rs  main.rs  package.rs  remote.rs  typegen.rs  update.rs
crates/rootbeer-core/: Cargo.toml  build.rs
crates/rootbeer-core/src/: deterministic.rs  lib.rs  lua.rs  pipeline.rs  plan.rs  store.rs
crates/rootbeer-core/src/executor/: apply.rs  dry_run.rs  mod.rs
crates/rootbeer-core/src/lua/: ctx.rs  fs.rs  mod.rs  module.rs  package.rs  require.rs  secret.rs  serializer.rs  sys.rs  test_support.rs  vm.rs  writer.rs
crates/rootbeer-core/src/lua/tests/: brew.rs  fs.rs  git.rs  mod.rs  package.rs  profile.rs  vm.rs  writer.rs  zsh.rs
crates/rootbeer-core/src/lua/writer/: codec.rs  json.rs  mod.rs  plist.rs  scripts.rs  toml.rs  yaml.rs
crates/rootbeer-core/src/package/: aqua.rs  download.rs  inputs.rs  intent.rs  lock.rs  lockfile.rs  mod.rs  profile.rs  realize.rs  resolve.rs  spec.rs
crates/rootbeer-core/src/profile/: error.rs  lua.rs  mod.rs  name.rs  spec.rs
docs/: Doxyfile  index.md  requirements.txt
docs/api/: brew.md  core.md  git.md  host.md  profile.md  ssh.md  zsh.md
docs/contributing/: architecture.md  packaging.md  setup.md  testing.md
docs/formats/: index.md  json.md  plist.md  toml.md  yaml.md
docs/guide/: conditional-config.md  core-api.md  core-concepts.md  getting-started.md  multi-device.md  packages.md  profiles.md  what-is-rootbeer.md
docs/modules/: amp.md  brew.md  claude-code.md  git.md  index.md  ini.md  json.md  mac.md  ssh.md  toml.md  zsh.md
docs/reference/: core.md  host.md  index.md
docs/scripts/: index.md
docs/source/: conf.py  index.rst
docs/source/c_api/: index.md  librootbeer.md  rb_plugin.md
docs/source/internal/: index.md  lua_module.md  rb_ctx.md  rb_helpers.md  rb_idlist.md  rb_strlist.md
include/: cli_module.h  lua_module.h  rb_ctx.h  rb_plugin.h  rb_rootbeer.h  rootbeer.h  store_module.h
lua/rootbeer/: amp.lua  brew.lua  claude_code.lua  core.lua  git.lua  host.lua  ini.lua  init.lua  json.lua  mac.lua  plist.lua  profile.lua  scripts.lua  ssh.lua  toml.lua  yaml.lua  zsh.lua
lua/rootbeer/shells/: init.lua  zsh.lua
scripts/: install.sh  lua2md.ts
src/: main.c
src/cli/: commands.c  main.c  main.zig  meson.build  parse.c
src/cli/cli_cmds/: store.c
src/cli/cli_tool/: parse.c
src/cli/commands/: apply.c  compose.c  store.c
src/cli/include/: rb_ctx_state.h  store_module.h
src/cli/lua_config/: lua_init.c
src/cli/rev_store/: create.c  current.c  manage.c
src/cli/util/: log.c
src/config/: load.c  lua_init.c  lua_module.c  module.c
src/config/functions/: ref_file.c
src/core/: context.zig  file_ops.zig  meson.build  primitives.zig  root.zig
src/core/api/: intermediate.c  track_gen_file.c  track_ref_file.c
src/core/helpers/: canon.c  idlist.c
src/core/include/: rb_strlist.h  rootbeer_core.h
src/core/lua/: write_file.c
src/internal_include/: rb_ctx.h  rb_helpers.h  rb_idlist.h
src/librootbeer/: meson.build
src/librootbeer/include/: rb_plugin.h
src/librootbeer/src/api/: execute_command.c  output_buffer.c  track_file.c  track_gen_file.c  track_ref_file.c
src/librootbeer/src/helpers/: strlist.c
src/plugins/: meson.build  plugin_registry.c
src/plugins/gen_plugin_registry/: gen_plugin_registry.py  meson.build
src/plugins/homebrew/: meson.build
src/plugins/homebrew/src/: core.c
src/plugins/rootbeer_core/: core.c  meson.build
src/plugins/rootbeer_core/src/: core.c  data.c  emit.c  interpolate_table.c  link_file.c  register_module.c  rootbeer_core.h  to_json.c  write_file.c
src/plugins/rpm_pkg/: meson.build
src/plugins/rpm_pkg/src/: plugin.c  query.c  rpm_pkg.h
src/plugins/rpm_pkg/src/solv/: repo_loader.c
src/rootbeer_cli/: meson.build
src/rootbeer_cli/gen_cmd_array/: gen_cmd_array.py  meson.build
src/rootbeer_cli/include/: cli_module.h  lua_init.h  rb_ctx_state.h  rootbeer.h  store_module.h
src/rootbeer_cli/src/cli_cmds/: apply.c  cmd_registry.c  init.c
src/rootbeer_cli/src/cli_tool/: command.c
src/rootbeer_cli/src/lua_config/: lua_init.c  lua_libs.c  lua_module.c  rb_ctx_state.c
src/rootbeer_cli/src/lua_config/functions/: debug_test.c
src/rootbeer_cli/src/rev_store/: create.c
src/rootbeer_cli/src/util/: fs.c
src/store/: create.c  current.c  manage.c  read.c  view.c
src/util/: fs.c
subprojects/: cjson.wrap
test/: rootbeer.lua  test.bash  test.lua  test_declarative.lua  test_hello.lua  test_link.lua  test_primitives.lua  test_require.lua  test_zsh.lua
test/dotfiles/: gitconfig
test/lua/: test3.lua
test/lua/tale/: test2.lua
