[package]
name = "rootbeer-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rb"
path = "src/main.rs"

[features]
default = ["embedded-stdlib"]
embedded-stdlib = ["rootbeer-core/embedded-stdlib"]

[dependencies]
clap = { version = "4.5.60", features = ["derive", "wrap_help"] }
owo-colors = { version = "4.3.0", features = ["supports-colors"] }
rootbeer-core = { path = "../rootbeer-core" }
