[package]
name = "rootbeer-core"
version = "0.1.0"
edition = "2021"

[features]
default = ["embedded-stdlib"]
embedded-stdlib = []

[dependencies]
libc = "0.2.182"
mlua = { version = "0.11.5", features = ["luau-jit", "serialize"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yml = "0.0.12"
plist = "1"
toml = "1"
sha2 = "0.10"

[dev-dependencies]
tempfile = "3"
